# ners570f25-SpMV

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  mwe.cpp
include/: SpMV.hpp  SparseMatrix.hpp  SparseMatrix_COO.hpp  SparseMatrix_CSR.hpp  SparseMatrix_DEN.hpp  SparseMatrix_ELL.hpp  SparseMatrix_JDS.hpp  viewDEN.hpp
include/spmv/: SparseMatrix_CSR.hpp  SparseMatrix_ELL.hpp  SparseMatrix_JDS.hpp  jds_storage.hpp
src/: ReadMe.md  SparseMatrix.cpp  SparseMatrix_COO.cpp  SparseMatrix_CSR.cpp  SparseMatrix_DEN.cpp  SparseMatrix_ELL.cpp  SparseMatrix_JDS.cpp  csr_view.cpp  jds_storage.cpp  viewDEN.cpp
src/vecs/: fs_183_1.vecin  fs_183_1.vecout  impcol_e.vecin  impcol_e.vecout  lns_3937.vecin  lns_3937.vecout  nnc666.vecin  nnc666.vecout  s1rmq4m1.vecin  s1rmq4m1.vecout
tests/: CMakeLists.txt  COO.cpp  COO_constructor_destructor_test.cpp  CSR_matvec_tests.cpp  DEN_constructorTests.cpp  DEN_matvec_test.cpp  ELL_matvec_unit_test.cpp  JDS_accessors_test.cpp  JDS_matvec_test.cpp  JDS_view_test.cpp  ReadMe.md  SparseMatrix_COO_Storage_Test.cpp  SparseMatrix_CSR_tests.cpp  SparseMatrix_CSR_tests.hpp  SparseMatrix_DEN_view_test.cpp  coo_accessors_test.cpp  coo_matvec_tests.cpp  coo_view_tests.cpp  csr_matrix_tests.cpp  csr_matvec_tests.cpp  csr_storage_test.cpp  csr_storage_tests.cpp  csr_tests.cpp  den_storage_test.cpp  den_storage_test.hpp  ell_accessors_test.cpp  test_DEN_accessors.cpp  test_ELL_storage.cpp  test_JDS_storage.cpp  test_SparseMatrix_JDS.cpp  test_ell_view.cpp  unit_test_framework.hpp
tests/den/: not_assembled.txt  view_dense.txt  view_empty.txt  view_nonsquare_1.txt  view_nonsquare_2.txt  view_square_large.txt  view_square_medium.txt  view_square_small.txt  view_square_small_int.txt
tests/tests/: test_viewCSR.cpp
